--- a/jquery/index.html
+++ b/jquery/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Jquery</h3>
+    <h3 id="header">Jquery</h3>
     <ul id="list">
         <li class="li-item">jQuery Referance</li>
         <li>Selector <a href="#">link</a></li>
@@ -25,5 +25,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
+    <script src="./stylingContent.js"></script>
 </body>
 </html>
