--- a/modulePatteern/demoModulePattern/index.html
+++ b/modulePatteern/demoModulePattern/index.html
@@ -53,8 +53,8 @@
         </div>
         <div class="card mt-4">
             <div class="card-footer text-end">
-                <p>Total (TL) <strong> 4500 TL</strong> </p>
-                <p>Total ($) <strong> 300 $</strong> </p>
+                <p>Total (TL) <strong> <span id="totalTl">175</span>  TL</strong> </p>
+                <p>Total ($) <strong><span id="totalDolar">10</span>$</strong> </p>
             </div>
         </div>
     </div>
